Make map visible with styling in application.scss, add style classes to button on list_restrooms partial, fix #calculateAndDisplayRoute on google_maps.js

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,6 +108,17 @@ input[type=checkbox] {
     max-width: 500px;
 }
 
+// GOOGLE MAPS
+.highlight-map {
+    height: 200px;
+    width: 280px;
+    margin: 15px 0;
+}
+
+.directions-panel {
+    max-width: 300px;
+}
+
 // FOOTER
 .container {
     margin-bottom: 100px;
